--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,14 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-ml-gray: #e6eff3;
   --color-ml-yellow: #ffd259;
   --color-ml-yellow-light: #ffedb9;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-inter: var(--font-inter);
   --font-barlow: var(--font-barlow);
+  --font-poppins: var(--font-poppins);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -156,5 +158,65 @@ body {
   font-family: var(--font-inter), sans-serif;
   font-weight: 900;
   font-optical-sizing: auto;
+  font-style: normal;
+}
+
+/* Poppins font utility classes */
+.poppins {
+  font-family: var(--font-poppins), sans-serif;
+  font-style: normal;
+}
+
+.poppins-thin {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.poppins-extralight {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: var(--font-poppins), sans-serif;
+  font-weight: 900;
   font-style: normal;
 }
